Rendering of models and testing interaction.

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="Source\SceneUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ChuanXu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -95,6 +98,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\SceneUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ChuanXu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
