Set up Calvert Scene

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="Source\SceneManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SceneCalvert.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -101,6 +104,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\SceneManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Scene_Calvert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
