--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -88,7 +88,8 @@
     <ClCompile Include="Source\Camera2.cpp" />
     <ClCompile Include="Source\Camera3.cpp" />
     <ClCompile Include="Source\ChuanXu.cpp" />
-  <ClCompile Include="Source\Camera4.cpp" />
+    <ClCompile Include="Source\Camera4.cpp" />
+    <ClCompile Include="Source\Enemy.cpp" />
     <ClCompile Include="Source\LoadOBJ.cpp" />
     <ClCompile Include="Source\LoadTGA.cpp" />
     <ClCompile Include="Source\main.cpp" />
@@ -107,7 +108,8 @@
     <ClInclude Include="Source\Camera2.h" />
     <ClInclude Include="Source\Camera3.h" />
     <ClInclude Include="Source\ChuanXu.h" />
-<ClInclude Include="Source\Camera4.h" />
+    <ClInclude Include="Source\Camera4.h" />
+    <ClInclude Include="Source\Enemy.h" />
     <ClInclude Include="Source\Light.h" />
     <ClInclude Include="Source\LoadOBJ.h" />
     <ClInclude Include="Source\LoadTGA.h" />
