->Update on Aloy_Scene for tga pics ->Implementing tga pic ->Implementing new text ->Implementing new FirstPersonCamera

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -56,7 +56,16 @@
     <ClCompile Include="Source\SceneCalvert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-<ClCompile Include="Source\ChuanXu.cpp">
+    <ClCompile Include="Source\ChuanXu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Aloy_Scene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Camera4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Fps_Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -109,16 +118,19 @@
     <ClInclude Include="Source\SceneManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-<ClInclude Include="Source\Scene_Calvert.h">
-<Filter>Header Files</Filter>
+    <ClInclude Include="Source\Scene_Calvert.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
-<ClInclude Include="Source\ChuanXu.h">
-<Filter>Header Files</Filter>
-</ClInclude>
-<ClInclude Include="Source\Aloy_Scene.h">
-<Filter>Header Files</Filter>
+    <ClInclude Include="Source\ChuanXu.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
-<ClInclude Include="Source\Camera4.h">
+    <ClInclude Include="Source\Aloy_Scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Camera4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Fps_Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
