I have made the skybox, the rock, the boulder and the ground mesh and the doors, still currently doing the map layout.

--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="Source\SceneUI.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
+    <ClCompile Include="Source\Wilson.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Aloy_Scene.h" />
@@ -124,6 +125,7 @@
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\Utility.h" />
     <ClInclude Include="Source\Vertex.h" />
+    <ClInclude Include="Source\Wilson.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\SimpleFragmentShader.fragmentshader" />
