Mostly done with optimisation.....

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 *.slo
 *.lo
 *.o
-*.obj
 
 # Precompiled Headers
 *.gch
@@ -11,7 +10,6 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
 
 # Fortran module files
 *.mod
@@ -21,14 +19,12 @@
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
 *.out
 *.app
-*.sdf
+Common/Debug/
+Application/Debug/
 *.opensdf
-*.idb
-*.tlog
-*.lastbuildstate
+*.sdf
