--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="Source\Camera3.cpp" />
     <ClCompile Include="Source\ChuanXu.cpp" />
     <ClCompile Include="Source\Camera4.cpp" />
+    <ClCompile Include="Source\CollisionChecker.cpp" />
     <ClCompile Include="Source\Enemy.cpp" />
     <ClCompile Include="Source\Fps_Camera.cpp" />
     <ClCompile Include="Source\LoadOBJ.cpp" />
