--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="Source\Scene1tutorial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\CollisionChecker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
