--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="Source\Scene1tutorial.cpp" />
     <ClCompile Include="Source\Scene4_Boss.cpp" />
     <ClCompile Include="Source\SceneCalvert.cpp" />
+    <ClCompile Include="Source\SceneGameOver.cpp" />
     <ClCompile Include="Source\SceneManager.cpp" />
     <ClCompile Include="Source\SceneUI.cpp" />
     <ClCompile Include="Source\shader.cpp" />
@@ -126,7 +127,9 @@
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshBuilder.h" />
     <ClInclude Include="Source\Scene.h" />
+    <ClInclude Include="Source\Scene1tutorial.h" />
     <ClInclude Include="Source\Scene4_Boss.h" />
+    <ClInclude Include="Source\SceneGameOver.h" />
     <ClInclude Include="Source\SceneManager.h" />
     <ClInclude Include="Source\SceneUI.h" />
     <ClInclude Include="Source\Scene_Calvert.h" />
