--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="Source\Scene1tutorial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Scene4_Boss.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
