Finally done with the Gameobject class.......

--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="Source\CollisionChecker.cpp" />
     <ClCompile Include="Source\Enemy.cpp" />
     <ClCompile Include="Source\Fps_Camera.cpp" />
+    <ClCompile Include="Source\GameObject.cpp" />
     <ClCompile Include="Source\LoadOBJ.cpp" />
     <ClCompile Include="Source\LoadScene.cpp" />
     <ClCompile Include="Source\LoadTGA.cpp" />
@@ -119,6 +120,7 @@
     <ClInclude Include="Source\CollisionChecker.h" />
     <ClInclude Include="Source\Enemy.h" />
     <ClInclude Include="Source\Fps_Camera.h" />
+    <ClInclude Include="Source\GameObject.h" />
     <ClInclude Include="Source\Light.h" />
     <ClInclude Include="Source\LoadOBJ.h" />
     <ClInclude Include="Source\LoadScene.h" />
