--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -83,9 +83,16 @@
     <ClCompile Include="Source\Scene1tutorial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
- <ClCompile Include="Source\SceneGameOver.cpp">
+    <ClCompile Include="Source\SceneGameOver.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>  </ItemGroup>
+    </ClCompile>
+    <ClCompile Include="Source\Scene4_Boss.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
       <Filter>Header Files</Filter>
@@ -169,6 +176,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Scene1tutorial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
