Completed Item Class Includes : bool for collection (if item is collected) string for description (u all can use it as u see fit (dialogue or anything else))

--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="Source\Enemy.cpp" />
     <ClCompile Include="Source\Fps_Camera.cpp" />
     <ClCompile Include="Source\GameObject.cpp" />
+    <ClCompile Include="Source\Item.cpp" />
     <ClCompile Include="Source\LoadOBJ.cpp" />
     <ClCompile Include="Source\LoadScene.cpp" />
     <ClCompile Include="Source\LoadTGA.cpp" />
@@ -125,6 +126,7 @@
     <ClInclude Include="Source\Enemy.h" />
     <ClInclude Include="Source\Fps_Camera.h" />
     <ClInclude Include="Source\GameObject.h" />
+    <ClInclude Include="Source\Item.h" />
     <ClInclude Include="Source\Light.h" />
     <ClInclude Include="Source\LoadOBJ.h" />
     <ClInclude Include="Source\LoadScene.h" />
