Add in Scene for MenuRoom Add in proper collision of room

--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="Source\LoadScene.cpp" />
     <ClCompile Include="Source\LoadTGA.cpp" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\MenuRoom.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshBuilder.cpp" />
     <ClCompile Include="Source\Player.cpp" />
@@ -132,6 +133,7 @@
     <ClInclude Include="Source\LoadScene.h" />
     <ClInclude Include="Source\LoadTGA.h" />
     <ClInclude Include="Source\Material.h" />
+    <ClInclude Include="Source\MenuRoom.h" />
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshBuilder.h" />
     <ClInclude Include="Source\Player.h" />
