--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -112,6 +112,7 @@
     <ClCompile Include="Source\Scene_Level2.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
+    <ClCompile Include="Source\Weapon.cpp" />
     <ClCompile Include="Source\Wilson.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +149,7 @@
     <ClInclude Include="Source\Scene_Level2.h" />
     <ClInclude Include="Source\Utility.h" />
     <ClInclude Include="Source\Vertex.h" />
+    <ClInclude Include="Source\Weapon.h" />
     <ClInclude Include="Source\Wilson.h" />
   </ItemGroup>
   <ItemGroup>
