Game Over Scene... Will edit the Scenemanager so loading will not come up... Make sure u all render a black screen like the Gameover when player dies

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClCompile Include="Source\playerBullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\GameOver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -221,6 +224,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\playerBullet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GameOver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
