--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClCompile Include="Source\GameOver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Credits.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -227,6 +230,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\GameOver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Credits.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
