--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -119,6 +119,9 @@
     <ClCompile Include="Source\Credits.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\tutorialScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -233,6 +236,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Credits.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\tutorialScene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
